# quip-node-manager

./: .gitignore  .gitlab-ci.yml  .gitmodules  AGENTS.md  CHANGELOG.md  CLI-windows.md  CLI.md  LINUX.md  NATIVE-BINARY-SPEC.md  OSX.md  README.md  WINDOWS.md  package.json
scripts/: install.ps1  install.sh
src/: app.js  index.html  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: checklist.rs  cmd.rs  compose.rs  config.rs  docker.rs  hardware.rs  lib.rs  log_stream.rs  main.rs  native.rs  network.rs  secret.rs  settings.rs  stack_assets.rs  tui_app.rs  tui_input.rs  tui_ui.rs  update.rs
