[package]
name = "quip-node-manager"
version = "0.0.0"
description = "Quip Node Desktop Manager"
authors = []
edition = "2021"
default-run = "quip-node-manager"

[lib]
name = "quip_node_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rand = "0.8"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
hex = "0.4"
dirs = "5"
libc = "0.2"
ratatui = "0.29"
crossterm = "0.28"

[profile.dev]
incremental = true

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
